fixed source centering and background image on mobile

--- a/src/styles/components/_Source.scss
+++ b/src/styles/components/_Source.scss
@@ -1,3 +1,6 @@
 .source {
+  display: grid;
   font-weight: 300;
+  justify-content: center;
+  margin-bottom: $m-size;
 }
